7 February 2013: Wouter
	- detect endianness in lookup3 on BSD, patch from Brad Smith.

5 February 2013: Wouter
	- Fix that old zonefile does not override newer AXFR for slave zones.
	- Nicer printout of notify.
	- beta4

4 February 2013: Wouter
	- Fix AXFR of NSEC3 slave zone.

1 February 2013: Wouter
	- Less printout of 'bad transfer'.

31 January 2013: Wouter
	- Fix that nsec3 zones are precompiled when read from udb.  This
	  caused assertion failures.
	- Fix is_apex flag for zones read from udb.

29 January 2013: Matthijs
	- RRL documented in nsd.conf.sample

29 January 2013: Wouter
	- printout log less verbosely, not every axfr packet.
	- remove printout of "bad transfer" to the log for notimpl.
	- fixup tests for new netstat and new netcat.

25 January 2013: Wouter
	- fix gcc warning, do not use uninit value for rng init.
	- fix zonefiles-check: entry in nsd.conf
	- remove -fwhole-program gcc flag usage.  We cannot reliably detect
	  if it works without failure.

23 January 2013: Wouter
	- beta3

22 January 2013: Wouter
	- Fix time calculation of zone transfer.
	- log ip address with tcp failure.  

21 January 2013: Wouter
	- Improve tabs in sample nsd.conf for different tabsizes.
	- Fix segv if xfrdir does not exit.
	- create xfrdir on make install (does not remove on make uninstall,
	  because this could be /tmp).
	- do not leave task files in /tmp if nsd fails to startup because
	  of file permissions.
	- do-ip4 and do-ip6 nsd.conf options just like unbound.
	- fixed testset for dig9 default with edns.

18 January 2013: Wouter
	- Fix configure for gentoo gcc and headers.
	- List libevent in README.
	- Tabs and spaces nicer in nsd.conf.sample.
	- Fix spurious assertion failure for some rrl blocks.

16 January 2013: Wouter
	- Added zonefiles-check option, default yes, check mtimes of zone files
	  on sighup and startup (from Robin Hack).

15 January 2013: Wouter
	- documented that the _implicit_ pattern names are used internally.

10 January 2013: Wouter